--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,14 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.14.0
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   provider: ^6.1.5
+  swipeable_button_view: ^0.0.2
 
 dev_dependencies:
   flutter_test:
