--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.14.0
+  device_preview: ^1.1.0
   firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
   flutter:
