--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   http: ^1.1.0
+  intl: ^0.18.0
   provider: ^6.1.5
   swipeable_button_view: ^0.0.2
 
