--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   intl: ^0.18.0
   provider: ^6.1.5
   swipeable_button_view: ^0.0.2
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
