--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  action_slider: ^0.7.0
   cloud_firestore: ^4.14.0
   connectivity_plus: ^5.0.2
   device_preview: ^1.1.0
@@ -18,7 +19,6 @@ dependencies:
   http: ^1.1.0
   intl: ^0.18.0
   provider: ^6.1.5
-  swipeable_button_view: ^0.0.2
   web_socket_channel: ^2.4.0
 
 dev_dependencies:
