--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,12 @@ dependencies:
   firebase_core: ^2.24.2
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.3.7
   flutter_svg: ^2.0.10+1
   http: ^1.1.0
   intl: ^0.18.0
   provider: ^6.1.5
+  shared_preferences: ^2.2.2
   web_socket_channel: ^2.4.0
 
 dev_dependencies:
